Updates to Website (broken slides)

--- a/index.html
+++ b/index.html
@@ -1,30 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <title>DoovaGames</title>
     <link rel="stylesheet" href="master.css">
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="scripts.js"></script>
 </head>
 <body>
 
-<p class="blue">A Way Home</p>
+<img src="images/DoovaGames.png" width="132" height="132">
+<p class="yellow">A Way Home</p>
+<hr>
+<p class="yellow">Concept</p>
+<p class="purple">A way home is a 3D game which explores mental illness's such as depression, loneliness and anxiety.
+    You as the player will play as the the 'Fisherman' who is on a boat and in space and essentially you will go through a journey and
+    there will be many obstacles such as asteriods and black holes which will represent the main issues.
+    Throughout their journey, there will be many planets which uses gravity and you could go on them.
+    The main purposes for this game is that the first reason is to show and educate the audience about mental health issues. Another reason is to raise awareness about this topic.
+    Finally our last purpose to send a positive message to the players.</p>
+<hr>
+<p class="yellow">Influences</p>
+<p class="purple"><u>Visual Influences</u></p>
+<div class="slideshows">
+    <img class="visual" src="images/visual0.png" width="800" height="450">
+</div>
+
+<p class="purple"><u>Game Mechanic Influence</u></p>
+<div class="slideshows">
+    <img class="mechanics" src="images/mechanics0.png" width="800" height="450">
+</div>
+
+<p class="purple"><u>Sound Influences</u></p>
+<div class="slideshows">
+    <img class="sound" src="images/sound0.png" width="800" height="450">
+</div>
+
+<hr>
+<p class="yellow">Updates</p>
+<hr>
+<p class="yellow">About Us</p>
+<p class="purple">We are a team of college students, developing a 6 week project to do with games beyond entertainment. We are based in East London.</p>
 <hr>
 <p class="yellow">Team</p>
+<p><a class="purple" href="https://www.instagram.com/notactualdeath/" style="text-decoration: none">George De'ath - Games Director</a></p>
 <p class="purple">Hassan Bahemia Areff - Programmer</p>
-<p class="purple">George De'ath - Games Director</p>
 <p class="purple">Shueb Islam - Artist</p>
 <p class="purple">Mohon Miah - Sound Designer</p>
-<hr>
-<p class="yellow">About</p>
-<hr>
-
+<div class="space"></div>
 <footer>
-    <hr>
-    <p class="yellow">Social Media</p>
+    <div>
     <a class="red" href="https://www.instagram.com/doova.games/">Instagram</a>
     <a class="red" href="https://twitter.com/DoovaDoova1">Twitter</a>
     <a class="red" href="mailto:doovagames@gmail.com">Contact us</a>
+    </div>
 </footer>
 
 </body>
