--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 
 <img src="images/DoovaGames.png" width="132" height="132">
 <p class="yellow">A Way Home</p>
+<ul>
+<li><a class="purple" href="#concept">Concept</a></li>
+<li><a class="purple" href="#influences">Influences</a></li>
+<li><a class="purple" href="#updates">Updates</a></li>
+<li><a class="purple" href="#aboutus">About Us</a></li>
+<li><a class="purple" href="#team">Team</a></li>
+</ul>
 <hr>
-<p class="yellow">Concept</p>
+<p id="concept" class="yellow">Concept</p>
 <p class="purple">A way home is a 3D game which explores mental illness's such as depression, loneliness and anxiety.
     You as the player will play as the the 'Fisherman' who is on a boat and in space and essentially you will go through a journey and
     there will be many obstacles such as asteriods and black holes which will represent the main issues.
@@ -19,7 +26,7 @@
     The main purposes for this game is that the first reason is to show and educate the audience about mental health issues. Another reason is to raise awareness about this topic.
     Finally our last purpose to send a positive message to the players.</p>
 <hr>
-<p class="yellow">Influences</p>
+<p id="influences" class="yellow">Influences</p>
 <p class="purple"><u>Visual Influences</u></p>
 <div class="slideshows">
     <img class="visual" src="images/visual0.png" width="800" height="450">
@@ -36,9 +43,9 @@
 </div>
 
 <hr>
-<p class="yellow">Updates</p>
+<p id="updates" class="yellow">Updates</p>
 <hr>
-<p class="yellow">About Us</p>
+<p id="aboutus" class="yellow">About Us</p>
 <p class="purple">We are a team of college students, developing a 6 week project to do with games beyond entertainment. We are based in East London.</p>
 <hr>
 <p class="yellow">Team</p>
