--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <p id="aboutus" class="yellow">About Us</p>
 <p class="purple">We are a team of college students, developing a 6 week project to do with games beyond entertainment. We are based in East London.</p>
 <hr>
-<p class="yellow">Team</p>
+<p id="team" class="yellow">Team</p>
 <p><a class="purple" href="https://www.instagram.com/notactualdeath/" style="text-decoration: none">George De'ath - Games Director</a></p>
 <p class="purple">Hassan Bahemia Areff - Programmer</p>
 <p class="purple">Shueb Islam - Artist</p>
