--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="scripts.js"></script>
 </head>
 <body>
+<button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
 <img src="images/DoovaGames.png" width="132" height="132">
 <p class="yellow">A Way Home</p>
@@ -44,6 +45,9 @@
 
 <hr>
 <p id="updates" class="yellow">Updates</p>
+<div class="progress-container">
+    <div style="width:0%" class="progress-bar"><span>0%</span></div>
+</div>
 <hr>
 <p id="aboutus" class="yellow">About Us</p>
 <p class="purple">We are a team of college students, developing a 6 week project to do with games beyond entertainment. We are based in East London.</p>
@@ -56,9 +60,10 @@
 <div class="space"></div>
 <footer>
     <div>
-    <a class="red" href="https://www.instagram.com/doova.games/">Instagram</a>
-    <a class="red" href="https://twitter.com/DoovaDoova1">Twitter</a>
-    <a class="red" href="mailto:doovagames@gmail.com">Contact us</a>
+        <a class="red" href="https://www.instagram.com/doova.games/">Instagram</a>
+        <a class="red" href="https://twitter.com/DoovaDoova1">Twitter</a>
+        <a class="red" href="https://www.gofundme.com/75p2g8-a-way-home">GoFundMe</a>
+        <a class="red" href="mailto:doovagames@gmail.com">Contact us</a>
     </div>
 </footer>
 
