--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 
-<img src="images/DoovaGames.png" width="132" height="132">
+<img class="company" src="images/DoovaGames.png">
 <p class="yellow">A Way Home</p>
+<p><img src="images/Awayhome.png" width="132" height="132"></p>
 <ul>
 <li><a class="purple" href="#concept">Concept</a></li>
 <li><a class="purple" href="#influences">Influences</a></li>
