--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img class="company" src="images/DoovaGames.png">
 <p class="yellow">A Way Home</p>
-<p><img src="images/Awayhome.png" width="132" height="132"></p>
+<p><img src="images/Awayhome.png" width="137" height="132"></p>
 <ul>
 <li><a class="purple" href="#concept">Concept</a></li>
 <li><a class="purple" href="#influences">Influences</a></li>
@@ -23,7 +23,7 @@
 <p id="concept" class="yellow">Concept</p>
 <p class="purple">A way home is a 3D game which explores mental illness's such as depression, loneliness and anxiety.
     You as the player will play as the the 'Fisherman' who is on a boat and in space and essentially you will go through a journey and
-    there will be many obstacles such as asteriods and black holes which will represent the main issues.
+    there will be many obstacles such as asteroids and black holes which will represent the main issues.
     Throughout their journey, there will be many planets which uses gravity and you could go on them.
     The main purposes for this game is that the first reason is to show and educate the audience about mental health issues. Another reason is to raise awareness about this topic.
     Finally our last purpose to send a positive message to the players.</p>
@@ -47,8 +47,9 @@
 <hr>
 <p id="updates" class="yellow">Updates</p>
 <div class="progress-container">
-    <div style="width:0%" class="progress-bar"><span>0%</span></div>
+    <div style="width:100%" class="progress-bar"><span>100%</span></div>
 </div>
+<iframe frameborder="0" src="https://itch.io/embed/427736?bg_color=d7e4ff&amp;fg_color=9932CC&amp;link_color=9932CC&amp;border_color=9932CC" width="552" height="167"></iframe>
 <hr>
 <p id="aboutus" class="yellow">About Us</p>
 <p class="purple">We are a team of college students, developing a 6 week project to do with games beyond entertainment. We are based in East London.</p>
